ipython (0.11-2) unstable; urgency=low

  * add patch fix-version-checks-for-pyzmq-2.1.10.patch
  * fix debianize-error-messages.patch to reraise unknown exceptions
  * suggest python-zmq for ipython package

 -- Julian Taylor <jtaylor.debian@googlemail.com>  Tue, 22 Nov 2011 20:43:28 +0100

ipython (0.11-1) experimental; urgency=low

  * New upstream release
  * install all upstream manpages
  * debian/copyright: refer to LGPL-2.1 instead of LGPL symlink
  * install .desktop files for ipython and ipython-qtconsole
    - override desktop-command-not-in-package lintian warning for -qtconsole
      the command is in ipython package on which -qtconsole depends
  * debian/control: update homepage

 -- Julian Taylor <jtaylor.debian@googlemail.com>  Sun, 31 Jul 2011 21:14:03 +0200

ipython (0.11~rc4-1) experimental; urgency=low

  * New upstream release candidate
  * update patch for debian specific error messages

 -- Julian Taylor <jtaylor.debian@googlemail.com>  Tue, 19 Jul 2011 12:15:23 +0200

ipython (0.11~rc3-1) experimental; urgency=low

  * New upstream release candidate
  * fix some DEP5 syntax errors
  * remove upstreamed testsuite-fix patch
  * delete disabled obsolete patches 03, 04, 06
  * move parallel binaries from ipython to ipython-parallel
  * remove obsolete manpages debian/ipythonx.1 and debian/ipython-wx.1
  * install parallel manpages only in -parallel package

 -- Julian Taylor <jtaylor.debian@googlemail.com>  Sun, 17 Jul 2011 16:09:01 +0200

ipython (0.11~rc1-1) experimental; urgency=low

  * New upstream release candidate
  * change to source format 3.0 (quilt)
  * run testsuite during build
  * add clean target
  * build-depends:
    - matplotlib, pymongo, xauth, xvfb and qt4 for tests
    - graphviz, sphinx for docs
  * add dependencies and don't install embedded copy:
    - python-argparse(Closes: #555348)
    - python-configobj (Closes: #555339)
    - python-simplegeneric
    - python-decorator
    - python-pyparsing
    - pexpect