@@ -18,7 +18,7 @@ Build-Depends-Indep: graphviz,
                      python-pyparsing,
                      python-qt4,
                      python-simplegeneric,
-                     python-sphinx,
+                     python-sphinx (>= 1.0.7+dfsg-1~),
                      python-wxgtk2.8,
                      python-zmq (>= 2.1.4),
                      xauth,
@@ -103,7 +103,7 @@ Description: enhanced interactive Python shell
 Package: ipython-doc
 Section: doc
 Architecture: all
-Depends: libjs-jquery, ${misc:Depends}
+Depends: ${misc:Depends}, ${sphinxdoc:Depends}
 Description: enhanced interactive Python shell
  IPython can be used as a replacement for the standard Python shell,
  or it can be used as a complete working environment for scientific
