@@ -1,1 +1,0 @@
-/usr/share/javascript/jquery/jquery.js usr/share/doc/ipython/html/_static/jquery.js
