@@ -7,7 +7,7 @@ override_dh_compress:
 	dh_compress -Xhtml/
 
 %:
-	dh $@ --with python2
+	dh $@ --with python2,sphinxdoc
 
 override_dh_auto_clean:
 	rm -f test_hist.sqlite
@@ -84,3 +84,8 @@ endif
 override_dh_installexamples:
 	dh_installexamples -pipython --exclude="examples/newparallel/"
 	dh_installexamples -pipython-parallel
+
+override_dh_sphinxdoc:
+ifeq (,$(filter nodocs,$(DEB_BUILD_OPTIONS)))
+	dh_sphinxdoc
+endif
