@@ -3,8 +3,11 @@ ipython (0.11-2) unstable; urgency=low
   * add patch fix-version-checks-for-pyzmq-2.1.10.patch
   * fix debianize-error-messages.patch to reraise unknown exceptions
   * suggest python-zmq for ipython package
+  * use dh_sphinxdoc
+    - bump sphinx dependency to >= 1.0.7+dfsg-1~, replace libjs-jquery
+      dependency with ${sphinxdoc:Depends} and drop ipython-doc.links
 
- -- Julian Taylor <jtaylor.debian@googlemail.com>  Tue, 22 Nov 2011 20:43:28 +0100
+ -- Julian Taylor <jtaylor.debian@googlemail.com>  Tue, 22 Nov 2011 22:47:53 +0100
 
 ipython (0.11-1) experimental; urgency=low
 
